--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,5 +76,5 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            whoami
-            ls -al
+            docker-compose ps
+            docker-compose up yandex-postgres yandex-mongo yandex-pgadmin
