--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "sequelize-typescript": "^2.1.3",
     "style-loader": "3.3.1",
     "webpack": "5.72.0",
-    "webpack-cli": "4.9.2"
+    "webpack-cli": "4.9.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "7.16.7",
