--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,17 @@ jobs:
           file_name: .env
           fail_on_empty: false
 
+        - name: execute remote script
+            uses: appleboy/ssh-action@master
+            with:
+              host: ${{ secrets.REMOTE_HOST }}
+              username: ${{ secrets.REMOTE_USER }}
+              key: ${{ secrets.SERVER_SSH_KEY }}
+              script: |
+                cd /home/deploy/
+                rm -rf three-dots-game
+                mkdir three-dots-game
+
       - name: Deploy to server
         uses: easingthemes/ssh-deploy@main
         env:
