--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "16.x"
+          node-version: "16.14.2"
 
       - name: Install npm dependencies
         run: npm ci --legacy-peer-deps
