--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "connected-react-router": "6.9.2",
     "css-loader": "6.7.1",
     "date-fns": "2.28.0",
-    "dotenv": "^16.0.1",
     "express": "4.18.1",
     "formik": "2.2.9",
     "framer-motion": "6.3.0",
@@ -90,6 +89,7 @@
     "@testing-library/react": "12.1.5",
     "@types/compression": "1.7.2",
     "@types/cookie-parser": "1.4.3",
+    "@types/dotenv-webpack": "^7.0.3",
     "@types/express": "4.17.13",
     "@types/history": "4.7.11",
     "@types/jest": "27.5.1",
@@ -117,6 +117,8 @@
     "cookie-parser": "1.4.6",
     "css-hot-loader": "1.4.4",
     "css-loader": "6.7.1",
+    "dotenv": "^16.0.1",
+    "dotenv-webpack": "^7.1.1",
     "eslint": "8.13.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
