--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "16.14.2"
+          node-version-file: ".nvmrc"
+          check-latest: true
 
       - name: Install npm dependencies
         run: npm ci --legacy-peer-deps
