--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-polyfill": "6.26.0",
     "compression": "1.7.4",
     "connected-react-router": "6.9.2",
+    "cors": "^2.8.5",
     "css-loader": "6.7.1",
     "date-fns": "2.28.0",
     "dotenv": "^16.0.1",
