--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     container_name: yandex-postgres
     image: postgres:12
 
+    volumes:
+    - ./services/postgres:/var/lib/postgresql/data
+
     ports:
       - "5432:5432"
 
