--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd /home/deploy/
-            rm -rf three-dots-game
+            sudo -u deploy rm -rf three-dots-game
 
       - name: Deploy to server
         uses: easingthemes/ssh-deploy@main
