--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     image: postgres:12
 
     volumes:
-    - ./services/postgres:/var/lib/postgresql/data
+    - /home/deploy/services/postgres:/var/lib/postgresql/data
 
     ports:
       - "5432:5432"
